<resources>
    <string name="app_name">Jatayu</string>
    <string name="take_picture">Take Picture</string>
    <string name="msg_subscribe_failed">Subscription Failed</string>
    <string name="msg_subscribed">Message Subscribed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="Email">Email</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="loading_text">Loading…</string>
    <string name="click_button">Click</string>
    <string name="gallery_button">Gallery</string>
    <string name="imageviewtooltip">Image will be displayed here</string>
    <string name="uploadbutton">Upload</string>
    <string name="customcid"> CID:</string>
    <string name="password">Password</string>
    <string name="showPassword">Show Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginbutton">Login</string>
    <string name="preference_cid">cid_p</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Please connect to internet and try again</string>
    <string name="checkUpdates">Check for Updates</string>
    <string name="showDevs">Developers</string>
    <string name="mailsent">Mail Sent</string>
    <string name="loginusingfingerprint">Login Using Fingerprint</string>
    <string name="dismiss">Dismiss</string>
    <string name="invalidcreds">Invalid Credentials</string>
    <string name="enterdata">Enter Data</string>
    <string name="OK">OK</string>
    <string name="criminalnotification">Criminal Detected, CID:</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name: </string>
    <string name="gender">Gender:</string>
    <string name="criminalid">Criminal ID:</string>
    <string name="latestloc">Latest Location:</string>
    <string name="lastDetected"> Last Detected:</string>
    <string name="timestamp"> TimeStamp:</string>
    <string name="mapnotinstalled">Maps Application not installed</string>
    <string name="detectionid">Detection ID:</string>
    <string name="error">Some unknown error occurred</string>
    <string name="noupdates">No Updates Available</string>
    <string name="updateavailable">Update for new version available</string>
    <string name="update">Update</string>
    <string name="updateCAPS">UPDATE</string>
    <string name="nottoday">NOT TODAY</string>
    <string name="chooseimagetoupload">Choose an image to upload</string>
    <string name="uploadingfile">Uploading File…</string>
    <string name="urierror">Error occurred, URI is invalid</string>
    <string name="filenotfound">File Not Found</string>
    <string name="urlerror">URL Error</string>
    <string name="rwerror">Read/Write Error</string>
    <string name="png">Permissions not granted</string>
    <string name="nodetavailable">No detections available</string>
    <string name="entercid">Enter Criminal ID Here…</string>
    <string name="changeLang">Change Language</string>
    <string name="detectionmaps">Detections(Maps)</string>
    <string name="detectionlist">Detections List</string>
    <string name="identify">Identify</string>
    <string name="alert">Alert</string>
    <string name="trackalert">Track Alert</string>
    <string name="violenceid">Violence ID</string>
    <string name="detect">Detect</string>
    <string name="viewvideo">View Video</string>
    <string name="logout">Logout</string>
    <string name="serverrror">Error occured in the server</string>
    <string name="impropercid">Improper CID Received</string>
    <string name="hindi">हिंदी </string>
</resources>
