<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_detect"
            android:icon="@drawable/ic_camera"
            android:title="@string/detect" />

        <item
            android:id="@+id/navigation_me"
            android:icon="@drawable/ic_bomb"
            android:title="@string/detectionlist" />

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_location"
            android:title="@string/detectionmaps" />

        <item
            android:id="@+id/navigation_violence"
            android:icon="@drawable/ic_bomb"
            android:title="Violence Data" />
    </group>

    <group
        android:id="@+id/middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/criminal_alert"
            android:icon="@drawable/ic_alert"
            android:title="@string/alert" />
        <item
            android:id="@+id/ic_track_locate"
            android:icon="@drawable/ic_track_locate"
            android:title="@string/trackalert" />

    </group>

    <group
        android:id="@+id/bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>