<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorMain"
    tools:context=".Activities.SettingsActivity">

    <Button
        android:id="@+id/changeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="40dp"
        android:shadowColor="@color/colorAccent"
        android:shadowRadius="5"
        android:text="@string/hindi"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDevelopers" />

    <Button
        android:id="@+id/checkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="250sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="40dp"
        android:shadowColor="@color/colorAccent"
        android:shadowRadius="5"
        android:text="@string/checkUpdates"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:visibility="visible"
        android:focusable="true"
        android:paddingHorizontal="40dp"
        android:shadowColor="@color/colorAccent"
        android:shadowRadius="5"
        android:text="@string/showDevs"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkUpdate" />

    <ProgressBar
        android:id="@+id/updateProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeLang" />

</androidx.constraintlayout.widget.ConstraintLayout>